[gd_scene load_steps=6 format=2]

[ext_resource path="res://Entities/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Sprites/Player/Dummy.png" type="Texture" id=2]
[ext_resource path="res://GUI/GUI.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 5.0
height = 1.0

[sub_resource type="Animation" id=2]

resource_name = "Mouth"
length = 0.7
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("MouthSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 3, 2, 1 ]
}

[node name="Player" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="." index="0"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="Mouth" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="MouthAnimation" type="AnimationPlayer" parent="Mouth" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Mouth = SubResource( 2 )
blend_times = [  ]
_sections_unfolded = [ "Pause", "Playback Options" ]

[node name="MouthSprite" type="Sprite" parent="Mouth" index="1"]

position = Vector2( -0.0626678, -10.905 )
texture = ExtResource( 2 )
vframes = 3
hframes = 2
frame = 1
_sections_unfolded = [ "Animation", "Region" ]

[node name="GUI" parent="." index="2" instance=ExtResource( 3 )]

[node name="SpeedCooldown" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false

[connection signal="timeout" from="SpeedCooldown" to="." method="_on_SpeedCooldown_timeout"]


